# HackageExplorer

./: Application.hs  Foundation.hs  HackageExplorer.cabal  LICENSE  README.md  stack.yaml
Handler/: Home.hs  PkgView.hs  ProcessAcq.hs  UnusedCat.hs
app/: AppWidgets.hs  HackageExplorerAux.hs  HackageExplorerDefs.hs  PkgPgParser.hs  RepairHTML.hs  ScanThread.hs  devel.hs
config/: keter.yml  models  routes  settings.yml  test-settings.yml
templates/: btn.hamlet  btn.julius  btn.lucius  category.hamlet  category.julius  categoryList.hamlet  categoryList.lucius  commaseparatedpkg.hamlet  default-layout-wrapper.hamlet  homepage.hamlet  homepage.lucius  pkgInfoLine1.hamlet  pkgInfoLine2.hamlet  pkgview.hamlet  pkgview.julius  pkgview.lucius  scan.hamlet  scan.julius  scan.lucius  selected.hamlet  selected.lucius  topinfo.hamlet  topinfo.lucius  unusedcat.hamlet  unusedcat.julius
