name:              HackageExplorer
version:           0.1.0.0
synopsis:          hackage.haskell.org packages scaner and local explorer. 
license:           BSD3
license-file:      LICENSE
author:            Kolodezny Diver
maintainer:        kolodeznydiver@gmail.com
category:          Development, Utils
cabal-version:     >= 1.8 
build-type:        Simple
description:     
    hackage.haskell.org packages scaner and local explorer.
    
Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs: ., app
    exposed-modules: Application
                     Foundation
                     Import
                     Import.NoFoundation
                     Model
                     Settings
                     Settings.StaticFiles
                     Handler.Common
                     Handler.Home
                     Handler.ProcessAcq
                     Handler.PkgView
                     Handler.UnusedCat
                     PkgPgParser
                     ScanThread
                     HackageExplorerDefs
                     RepairHTML
                     HackageExplorerAux
                     AppWidgets

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -threaded -fwarn-tabs -O0
    else
        ghc-options:   -Wall -threaded -fwarn-tabs -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                RecordWildCards

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.4.3      && < 1.5
                 , yesod-core                    >= 1.4.17     && < 1.5
                 , yesod-auth                    >= 1.4.0      && < 1.5
                 , yesod-static                  >= 1.4.0.3    && < 1.6
                 , yesod-form                    >= 1.4.0      && < 1.5
                 , classy-prelude                >= 0.10.2
                 , classy-prelude-conduit        >= 0.10.2
                 , classy-prelude-yesod          >= 0.10.2
                 , bytestring                    >= 0.9        && < 0.11
                 , text                          >= 0.11       && < 2.0
                 , persistent                    >= 2.0        && < 2.6
                 , persistent-sqlite             >= 2.1.1      && < 2.6
                 , persistent-template           >= 2.0        && < 2.6
                 , template-haskell
                 , shakespeare                   >= 2.0        && < 2.1
                 , hjsmin                        >= 0.1        && < 0.3
                 , monad-control                 >= 0.3        && < 1.1
                 , wai-extra                     >= 3.0        && < 3.1
                 , yaml                          >= 0.8        && < 0.9
                 , http-conduit                  >= 2.1        && < 2.2
                 , directory                     >= 1.1        && < 1.3
                 , warp                          >= 3.0        && < 3.3
                 , data-default
                 , aeson                         >= 0.6        && < 0.12
                 , conduit                       >= 1.0        && < 2.0
                 , monad-logger                  >= 0.3        && < 0.4
                 , fast-logger                   >= 2.2        && < 2.5
                 , wai-logger                    >= 2.2        && < 2.3
                 , file-embed
                 , safe
                 , unordered-containers
                 , containers
                 , vector
                 , time
                 , case-insensitive
                 , wai
                 , blaze-html
                 , http-client
                 , xml-conduit
                 , xml-lens
                 , stm
                 , monad-extras
                 , monad-loops
                 , taggy
                 , taggy-lens
                 , lens
                 , THEff
                 , parsec 
                      
executable         HackageExplorer
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base, HackageExplorer

    ghc-options:       -threaded -rtsopts -with-rtsopts=-N
